--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 ---
 <!--                         Das Jahr 2025                                -->
 <!-------------------------------------------------------------------------->
+
+
+<h2 align="center">Das Jahr 2026</h2>
+
+<p align="center"><font color="#FF0000"><b>
+  In der Versammlung im Februar wurden die (vorläufigen) Termine für des Jahr 20236
+  abgestimmt (siehe hierzu Terminseite).
+  Wir freuen uns auf das traditionelle 1. Rennen am Ostermontag und hoffen auf
+  gutes Wetter und rege Beteiligung auf unserer Kartbahn.
+  </b></font></p>
+  
+
 <h2 align="center">Das Jahr 2025</h2>
 
 <h3 align="center">5. Lauf um den Jahrespokal des EMC am 12. Oktober 2025</h3>
