--- a/termine.html
+++ b/termine.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Termine 2025
+title: Termine 2026
 description:
 ---
 
@@ -38,7 +38,7 @@ description:
       <tr>
         <td>Mai</td>
         <td>7. Mai</td>
-        <td>25. Mai 2. Rennen  Pfingstmontag></td>
+        <td>25. Mai 2. Rennen  Pfingstmontag</td>
       </tr>
       <tr>
         <td>Juni</td>
